# RMVA

./: CMakeLists.txt  README.md
config/: params.yaml
launch/: vision.launch.py
player_pkg/: CMakeLists.txt  package.xml
player_pkg/install/: local_setup.sh  setup.sh
player_pkg/log/: latest_build
player_pkg/src/: armor_node.cpp  multi_armors_node(成）.cpp  multi_armors_node.cpp  muti_armors_node（待定）.cpp  shooter_node.cpp
results/: TeamA_results0.json  TeamA_results0.json.sha256
results/TeamA_results4阶段3,4/: TeamA_results3.json  TeamA_results3.json.sha256  TeamA_results4.json  TeamA_results4.json.sha256
results/TeamA_results单装甲板/: TeamA_results0.json  TeamA_results0.json.sha256
results/TeamA_results圆环/: TeamA_results1.json  TeamA_results1.json.sha256
results/TeamA_results球/: TeamA_results0.json  TeamA_results0.json.sha256
results/TeamA_results矩形/: TeamA_results0.json  TeamA_results0.json.sha256
results/TeamA_results箭头/: TeamA_results2.json  TeamA_results2.json.sha256
src/: multi_armor_vision_node1.cpp  multi_armors_node.cpp  race_stage_subscriber.cpp  rec_vision.cpp  sphere_vision.cpp
